Added Accordion, data code split, localized images

--- a/src/scss/accordion.scss
+++ b/src/scss/accordion.scss
@@ -1,13 +1,4 @@
-p {
-  margin: 0;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-body {
+.container {
   background-color: purple;
 }
 
