--- a/src/css/birthdayReminder.module.css
+++ b/src/css/birthdayReminder.module.css
@@ -1,6 +1,6 @@
-body {
+.container {
   display: flex;
-  min-height: 100vh;
+  min-height: 100%;
   justify-content: center;
   align-items: center;
   background: hotpink;
