--- a/src/css/reviews.module.css
+++ b/src/css/reviews.module.css
@@ -1,14 +1,10 @@
-body {
-  margin: 0;
-  background-color: #f1f5f8;
-}
-
 .appContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  background-color: #f1f5f8;
+  height: 100%;
 }
 
 .header {
