--- a/src/scss/birthdayReminder.scss
+++ b/src/scss/birthdayReminder.scss
@@ -1,6 +1,6 @@
-body {
+.container {
   display: flex;
-  min-height: 100vh;
+  min-height: 100%;
   justify-content: center;
   align-items: center;
   background: hotpink;
