--- a/src/css/menu.module.css
+++ b/src/css/menu.module.css
@@ -1,58 +1,86 @@
-.page {
+.menu {
   background-color: #ebf7ff;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  max-height: max-content;
+  min-height: 100%;
+  padding: 80px 0;
+}
+
+.header {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.header__text {
+  font-size: 2rem;
+  margin-bottom: 0.75rem;
+}
+
+.header__underline {
+  height: 0.125rem;
+  width: 80%;
+  margin: 0 auto;
+  background-color: #c59d5f;
+}
+
+.navbar {
+  text-align: center;
+  margin-bottom: 4rem;
 }
 
 .navbar__button {
+  font-size: 1.3rem;
   color: #c59d5f;
+  margin: 0 0.5rem;
+  padding: 0.375rem 0.75rem;
+  text-transform: capitalize;
   border: none;
   background-color: #ebf7ff;
+  cursor: pointer;
+  transition: background-color 300ms, color 300ms;
+}
+
+.navbar__button:hover {
+  background-color: #c59d5f;
+  color: white;
+}
+
+.navbar__button--clicked {
+  background-color: #c59d5f;
+  color: white;
 }
 
 .itemList {
   display: grid;
   grid-row-gap: 2rem;
-}
-
-@media (min-width: 1200px) {
-  .itemList {
-    grid-template-columns: auto auto;
-    grid-gap: 3rem 2rem;
-  }
+  width: 73.125rem;
+  max-width: 95vw;
+  align-items: center;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 3rem 2rem;
 }
 
 .item {
   display: flex;
-}
-
-@media (max-width: 1200px) {
-  .item {
-    flex-direction: column;
-    align-items: center;
-  }
+  flex-direction: row;
+  align-items: flex-start;
 }
 
 .item__img {
-  border: 3px solid #c59d5f;
-  width: 25rem;
-  max-width: 95%;
-  height: 12.5rem;
+  border: 5px solid #c59d5f;
+  border-radius: 3px;
+  min-width: 14.0625rem;
+  height: 9.375rem;
   object-fit: cover;
-}
-
-@media (min-width: 1200px) {
-  .item__img {
-    width: 14.0625rem;
-    height: 9.375rem;
-  }
-}
-
-.item__section {
-  width: 24.6875rem;
-  max-width: 95vw;
+  margin-right: 1.25rem;
 }
 
 .item__header {
   display: flex;
+  text-transform: capitalize;
   justify-content: space-between;
   border-bottom: 1px dotted black;
   padding: 0.5rem;
@@ -65,4 +93,38 @@
 
 .item__desc {
   margin-top: 1rem;
+}
+
+@media only screen and (max-width: 1200px) {
+  .itemList {
+    grid-template-columns: auto;
+    width: 40rem;
+  }
+  .item__img {
+    width: 14.0625rem;
+    height: 9.375rem;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .itemList {
+    width: 25rem;
+    max-width: 95vw;
+    justify-content: center;
+  }
+  .item {
+    max-width: 95vw;
+    flex-direction: column;
+    align-items: center;
+  }
+  .item__img {
+    width: 25rem;
+    max-width: 95vw;
+    height: 12.5rem;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+  }
+  .item__section {
+    max-width: 95vw;
+  }
 }
