--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -1,55 +1,88 @@
 @import "variables";
 $gold-color: #c59d5f;
 
-.page {
+.menu {
   background-color: $backgroundColorLight;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  max-height: max-content;
+  min-height: 100%;
+  padding: 80px 0;
+}
+
+.header {
+  text-align: center;
+  margin-bottom: 2rem;
+  &__text {
+    font-size: 2rem;
+    margin-bottom: 0.75rem;
+  }
+  &__underline {
+    height: 0.125rem;
+    width: 80%;
+    margin: 0 auto;
+    background-color: $gold-color;
+  }
 }
 
 .navbar {
+  text-align: center;
+  margin-bottom: 4rem;
+
   &__button {
+    font-size: 1.3rem;
     color: $gold-color;
+    margin: 0 0.5rem;
+    padding: 0.375rem 0.75rem;
+    text-transform: capitalize;
     border: none;
     background-color: $backgroundColorLight;
+    cursor: pointer;
+    transition: background-color 300ms, color 300ms;
+
+    &:hover {
+      background-color: $gold-color;
+      color: white;
+    }
+
+    &--clicked {
+      background-color: $gold-color;
+      color: white;
+    }
   }
 }
 
 .itemList {
   display: grid;
-  @media (min-width: 1200px) {
-    grid-template-columns: auto auto;
-    grid-gap: 3rem 2rem;
-  }
   grid-row-gap: 2rem;
+  width: 73.125rem;
+  max-width: 95vw;
+  align-items: center;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 3rem 2rem;
 }
 
 .item {
   display: flex;
-
-  @media (max-width: 1200px) {
-    flex-direction: column;
-    align-items: center;
-  }
-
+  flex-direction: row;
+  align-items: flex-start;
   &__img {
-    @media (min-width: 1200px) {
-      width: 14.0625rem;
-      height: 9.375rem;
-    }
-
-    border: 3px solid $gold-color;
-    width: 25rem;
-    max-width: 95%;
-    height: 12.5rem;
+    border: 5px solid $gold-color;
+    border-radius: 3px;
+    min-width: 14.0625rem;
+    height: 9.375rem;
     object-fit: cover;
+    margin-right: 1.25rem;
   }
 
   &__section {
-    width: 24.6875rem;
-    max-width: 95vw;
   }
 
   &__header {
     display: flex;
+    text-transform: capitalize;
     justify-content: space-between;
     border-bottom: 1px dotted black;
     padding: 0.5rem;
@@ -62,5 +95,41 @@ $gold-color: #c59d5f;
 
   &__desc {
     margin-top: 1rem;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .itemList {
+    grid-template-columns: auto;
+    width: 40rem;
+  }
+  .item {
+    &__img {
+      width: 14.0625rem;
+      height: 9.375rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .itemList {
+    width: 25rem;
+    max-width: 95vw;
+    justify-content: center;
+  }
+  .item {
+    max-width: 95vw;
+    flex-direction: column;
+    align-items: center;
+    &__img {
+      width: 25rem;
+      max-width: 95vw;
+      height: 12.5rem;
+      margin: 0 auto;
+      margin-bottom: 1rem;
+    }
+    &__section {
+      max-width: 95vw;
+    }
   }
 }
