--- a/src/css/menu.module.css
+++ b/src/css/menu.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   max-height: max-content;
   min-height: 100%;
-  padding: 80px 0;
+  padding: 5rem 0;
 }
 
 .header {
@@ -27,7 +27,6 @@
 }
 
 .navbar {
-  text-align: center;
   margin-bottom: 4rem;
 }
 
@@ -48,7 +47,7 @@
   color: white;
 }
 
-.navbar__button--clicked {
+.navbar__button_clicked {
   background-color: #c59d5f;
   color: white;
 }
