--- a/src/css/global.module.css
+++ b/src/css/global.module.css
@@ -23,10 +23,15 @@ h1,
 h2,
 h3,
 h4,
-h5 {
+h5,
+ul,
+ol {
   margin: 0;
 }
 
+/**
+  *Remove all padding in browsers.
+  */
 /**
  * Render the `main` element consistently in IE.
  */
