--- a/src/css/tabs.module.css
+++ b/src/css/tabs.module.css
@@ -1,4 +1,104 @@
 .tabs {
   width: 100%;
+  height: 100%;
   background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 5rem 4rem;
+}
+
+.title,
+.isLoading {
+  font-size: 1.5rem;
+  display: flex;
+  width: max-content;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  margin-bottom: 4rem;
+}
+
+.title__text,
+.isLoading__text {
+  margin-bottom: 0.75rem;
+}
+
+.title__line,
+.isLoading__line {
+  background-color: #2caeba;
+  width: 50%;
+  height: 0.2rem;
+  margin: 0 auto;
+}
+
+.companyNav {
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 4rem;
+}
+
+.companyNav__btn {
+  margin: 0 0.5rem;
+  padding: 0.25rem 0;
+  border: 0.1rem solid white;
+  background-color: inherit;
+  cursor: pointer;
+  transition: all 500ms;
+  outline: none;
+}
+
+.companyNav__btn_clicked {
+  color: #2caeba;
+  border-bottom: 0.1rem solid #2caeba;
+}
+
+.companyNav__btn:hover {
+  color: #2caeba;
+  border-bottom: 0.1rem solid #2caeba;
+}
+
+.info {
+  margin: 0 2rem;
+}
+
+.info__title {
+  margin-bottom: 0.75rem;
+  font-weight: 500;
+}
+
+.info__company {
+  width: min-content;
+  background-color: #ebf7ff;
+  color: #2caeba;
+  padding: 0.385rem 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.info__dates {
+  margin-bottom: 1.25rem;
+}
+
+.info__duties {
+  margin-left: 2rem;
+  padding: 0;
+}
+
+.info__duty {
+  margin-bottom: 1.25rem;
+}
+
+@media only screen and (min-width: 992px) {
+  .tabsMain {
+    display: flex;
+  }
+  .companyNav {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    margin-right: 4rem;
+  }
+  .companyNav__btn {
+    margin: 0.5rem 0;
+  }
 }
