--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -1,7 +1,102 @@
+@import "variables";
+
 .tabs {
   width: 100%;
+  height: 100%;
   background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 5rem 4rem;
 }
 
-.company {
+.title,
+.isLoading {
+  font-size: 1.5rem;
+  display: flex;
+  width: max-content;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  margin-bottom: 4rem;
+  &__text {
+    margin-bottom: 0.75rem;
+  }
+
+  &__line {
+    background-color: $mainColor;
+    width: 50%;
+    height: 0.2rem;
+    margin: 0 auto;
+  }
+}
+
+.companyNav {
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 4rem;
+
+  &__btn {
+    margin: 0 0.5rem;
+    padding: 0.25rem 0;
+    border: 0.1rem solid white;
+    background-color: inherit;
+    cursor: pointer;
+    transition: all 500ms;
+    outline: none;
+
+    &_clicked {
+      color: $mainColor;
+      border-bottom: 0.1rem solid $mainColor;
+    }
+
+    &:hover {
+      color: $mainColor;
+      border-bottom: 0.1rem solid $mainColor;
+    }
+  }
+}
+
+.info {
+  margin: 0 2rem;
+  &__title {
+    margin-bottom: 0.75rem;
+    font-weight: 500;
+  }
+
+  &__company {
+    width: min-content;
+    background-color: $backgroundColorLight;
+    color: $mainColor;
+    padding: 0.385rem 0.75rem;
+    margin-bottom: 0.75rem;
+  }
+
+  &__dates {
+    margin-bottom: 1.25rem;
+  }
+
+  &__duties {
+    margin-left: 2rem;
+    padding: 0;
+  }
+
+  &__duty {
+    margin-bottom: 1.25rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .tabsMain {
+    display: flex;
+  }
+  .companyNav {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    margin-right: 4rem;
+    &__btn {
+      margin: 0.5rem 0;
+    }
+  }
 }
