--- a/src/css/birthdayReminder.module.css
+++ b/src/css/birthdayReminder.module.css
@@ -1,34 +1,58 @@
 .container {
   display: flex;
   min-height: 100%;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background: hotpink;
 }
 
-.header {
-  margin-bottom: 32px;
-  font-size: 20px;
+.container__info {
+  margin-top: 1rem;
 }
 
-.blockDisplay {
+.mainView {
+  height: 100%;
+}
+
+.mainView__header {
+  margin-bottom: 2rem;
+  font-size: 1.25rem;
+}
+
+.birthdayReminder {
   box-shadow: 2px 2px 10px 10px rgba(0, 0, 0, 0.137);
   border-radius: 10px;
-  width: 450px;
-  height: 653px;
-  padding: 32px 24px;
+  width: 28.125rem;
+  max-width: 95vw;
+  min-height: 40.8rem;
+  padding: 2rem 1.5rem;
   background: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.loadingHeader {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loadingHeader__text {
+  font-size: 2rem;
 }
 
 .personBlock {
-  margin-bottom: 24px;
+  margin-bottom: 1.5rem;
   display: flex;
 }
 
 .personBlock__image {
   background: white;
-  width: 70px;
-  height: 70px;
+  width: 4.375rem;
+  height: 4.375rem;
   object-fit: cover;
   border-radius: 50%;
 }
@@ -48,16 +72,12 @@
   font-weight: 300;
 }
 
-.btnContainer {
-  text-align: center;
-}
-
-.btnContainer .button {
+.button {
   font-size: 19.2px;
-  margin-top: 32px;
-  padding: 8px;
-  width: 386px;
-  height: 42px;
+  margin-top: 2rem;
+  padding: 0.5rem;
+  width: 100%;
+  height: 2.625rem;
   text-decoration: none;
   color: white;
   line-height: 0;
