--- a/src/css/ourTours.module.css
+++ b/src/css/ourTours.module.css
@@ -17,7 +17,7 @@
 .siteHeader {
   font-size: 3rem;
   text-align: center;
-  margin: 20px;
+  margin: 1.25rem;
   font-weight: 900;
 }
 
@@ -30,7 +30,7 @@
 
 .siteHeader__refresh {
   margin-top: 30px;
-  padding: 10px 20px;
+  padding: 10px 1.25rem;
   font-size: 1.5rem;
   font-weight: 500;
   background: #ebf7ff;
@@ -40,9 +40,9 @@
 
 .tourCard {
   background-color: white;
-  margin: 20px 0px;
+  margin: 1.25rem 0px;
   font-size: 1.2rem;
-  width: 800px;
+  width: 38.75rem;
   max-width: 95vw;
   border-radius: 10px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.418);
@@ -55,16 +55,16 @@
   object-fit: cover;
 }
 
-.tourCard header {
+.tourCard__header {
   justify-content: space-between;
-  margin: 20px;
-  margin-bottom: 0px;
+  width: 100%;
+  padding: 1.25rem;
+  padding-bottom: 0px;
 }
 
 .tourCard__title {
   font-weight: 700;
   font-size: 1.5rem;
-  vertical-align: middle;
   line-height: normal;
 }
 
@@ -74,13 +74,13 @@
   height: min-content;
   color: #49aeef;
   border-radius: 5px;
-  padding: 8px 5px;
+  padding: 0.5rem 5px;
 }
 
 .tourCard__summary {
   font-weight: 300;
   text-align: left;
-  margin: 20px 15px;
+  margin: 1.25rem 15px;
 }
 
 .tourCard__readMore {
@@ -91,12 +91,12 @@
 }
 
 .tourCard__notInterested {
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
   font-size: 1.2rem;
   color: red;
   border: 1px solid red;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   background-color: white;
-  padding: 8px 30px;
+  padding: 0.5rem 30px;
   align-self: center;
 }
