--- a/src/css/reviews.module.css
+++ b/src/css/reviews.module.css
@@ -35,7 +35,7 @@
   width: 620px;
   max-width: 90vw;
   height: 418px;
-  padding: 24px 32px;
+  padding: 1.5rem 2rem;
   background-color: white;
   box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.25);
 }
@@ -46,8 +46,8 @@
 }
 
 .card__arrowButton {
-  width: 20px;
-  height: 20px;
+  width: 1.25rem;
+  height: 1.25rem;
   border: none;
   margin: 0px 0.5rem;
 }
@@ -112,7 +112,7 @@
 }
 
 .info__job {
-  margin-bottom: 8px;
+  margin-bottom: 0.5rem;
   color: #49a6ed;
 }
 
