--- a/src/css/tabs.module.css
+++ b/src/css/tabs.module.css
@@ -1,7 +1,7 @@
 .tabs {
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: #ebf7ff;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -34,14 +34,14 @@
 
 .companyNav {
   text-align: center;
-  font-size: 20px;
+  font-size: 1.25rem;
   margin-bottom: 4rem;
 }
 
 .companyNav__btn {
   margin: 0 0.5rem;
   padding: 0.25rem 0;
-  border: 0.1rem solid white;
+  border: 0.1rem solid #ebf7ff;
   background-color: inherit;
   cursor: pointer;
   transition: all 500ms;
