--- a/src/scss/birthdayReminder.scss
+++ b/src/scss/birthdayReminder.scss
@@ -1,33 +1,54 @@
 .container {
   display: flex;
   min-height: 100%;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background: hotpink;
+  &__info {
+    margin-top: 1rem;
+  }
 }
 
-.header {
-  margin-bottom: 32px;
-  font-size: 20px;
+.mainView {
+  height: 100%;
+  &__header {
+    margin-bottom: 2rem;
+    font-size: 1.25rem;
+  }
 }
 
-.blockDisplay {
+.birthdayReminder {
   box-shadow: 2px 2px 10px 10px rgba(0, 0, 0, 0.137);
   border-radius: 10px;
-  width: 450px;
-  height: 653px;
-  padding: 32px 24px;
+  width: 28.125rem;
+  max-width: 95vw;
+  min-height: 40.8rem;
+  padding: 2rem 1.5rem;
   background: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.loadingHeader {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &__text {
+    font-size: 2rem;
+  }
 }
 
 .personBlock {
-  margin-bottom: 24px;
+  margin-bottom: 1.5rem;
   display: flex;
 
   &__image {
     background: white;
-    width: 70px;
-    height: 70px;
+    width: 4.375rem;
+    height: 4.375rem;
     object-fit: cover;
     border-radius: 50%;
   }
@@ -48,19 +69,15 @@
   }
 }
 
-.btnContainer {
-  text-align: center;
-
-  .button {
-    font-size: 19.2px;
-    margin-top: 32px;
-    padding: 8px;
-    width: 386px;
-    height: 42px;
-    text-decoration: none;
-    color: white;
-    line-height: 0;
-    background: hotpink;
-    border: none;
-  }
+.button {
+  font-size: 19.2px;
+  margin-top: 2rem;
+  padding: 0.5rem;
+  width: 100%;
+  height: 2.625rem;
+  text-decoration: none;
+  color: white;
+  line-height: 0;
+  background: hotpink;
+  border: none;
 }
