--- a/src/scss/reviews.scss
+++ b/src/scss/reviews.scss
@@ -40,7 +40,7 @@ $primary-color: #49a6ed;
   max-width: 90vw;
   height: 418px;
 
-  padding: 24px 32px;
+  padding: 1.5rem 2rem;
   background-color: white;
   box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.25);
 
@@ -50,8 +50,8 @@ $primary-color: #49a6ed;
   }
 
   &__arrowButton {
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     border: none;
     margin: 0px 0.5rem;
   }
@@ -116,7 +116,7 @@ $primary-color: #49a6ed;
   }
 
   &__job {
-    margin-bottom: 8px;
+    margin-bottom: 0.5rem;
     color: $primary-color;
   }
 
