--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -3,7 +3,7 @@
 .tabs {
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: $backgroundColorLight;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -33,13 +33,13 @@
 
 .companyNav {
   text-align: center;
-  font-size: 20px;
+  font-size: 1.25rem;
   margin-bottom: 4rem;
 
   &__btn {
     margin: 0 0.5rem;
     padding: 0.25rem 0;
-    border: 0.1rem solid white;
+    border: 0.1rem solid $backgroundColorLight;
     background-color: inherit;
     cursor: pointer;
     transition: all 500ms;
